@@ -2,10 +2,12 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'jacoco'
+    id "org.sonarqube" version "3.3"
+    id 'signing'
 }
 
-group 'org.semanticpie'
-version '0.7.2'
+group 'io.github.semantic-pie'
+version '0.7.0.1'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -27,7 +29,13 @@ test {
     useJUnitPlatform()
 }
 
+// For java9 modules
+//compileJava {
+//    options.compilerArgs += ['--add-reads', 'JMantic.main=ALL-UNNAMED']
+//    options.compilerArgs += ['-Xlint:unchecked'] // use to see more information about compiler warnings
+//}
 
+// Create jar archive with dependencies
 jar {
     from {
         configurations.runtimeClasspath.filter { it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
@@ -47,28 +55,71 @@ jacocoTestReport {
 
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "semanticpie_JMantic"
+        property "sonar.organization", "semantic-pie"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
 java {
     withJavadocJar()
     withSourcesJar()
 }
 
 publishing {
+
     publications {
-        maven(MavenPublication) {
-            groupId 'org.semanticpie'
+        gpr(MavenPublication) {
+            groupId 'io.github.semantic-pie'
             artifactId 'jmantic'
-            version '0.7.2'
-
+            version '0.7.0.1'
             from components.java
-
             pom {
                 name = 'JMantic'
-                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol'
-                url = 'https://github.com/semantic-pie/JMantic'
+                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol Options';
+                url = 'https://github.com/artrayme/JMantic'
                 licenses {
                     license {
                         name = 'MIT'
                         url = 'https://opensource.org/licenses/MIT'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'semantic-pie'
+                        name = 'Semantic Pie'
+                        email = 'ardonplay2@icloud.com'
+                    }
+                }
+                scm {
+                    developerConnection = 'scm:git:https://github.com/semantic-pie/JMantic.git'
+                    url = 'https://github.com/semantic-pie/JMantic'
+                }
+            }
+        }
+
+        mavenJava(MavenPublication) {
+            groupId 'io.github.semantic-pie'
+            artifactId 'jmantic'
+            version '0.7.0.1'
+            from components.java
+            pom {
+                name = 'JMantic'
+                description = 'JMantic is a java library for working with the sc-memory of the OSTIS project over the websocket protocol Options';
+                url = 'https://github.com/artrayme/JMantic'
+                licenses {
+                    license {
+                        name = 'MIT'
+                        url = 'https://opensource.org/licenses/MIT'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'semantic-pie'
+                        name = 'Semantic Pie'
+                        email = 'ardonplay2@icloud.com'
                     }
                 }
                 scm {
@@ -78,16 +129,32 @@ publishing {
             }
         }
     }
-
     repositories {
         maven {
-            url 'https://maven.pkg.github.com/semantic-pie/jmantic'
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/semantic-pie/jmantic")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
             }
         }
+        maven {
+            name = "Sonatype"
+            url = uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/")
+            credentials {
+                username = System.getenv("SONATYPE_ACTOR")
+                password = System.getenv("SONATYPE_PASSWORD")
+            }
+        }
     }
+}
+
+signing {
+    def signingKey = System.getenv("GPG_KEY")
+    def signingPassword = System.getenv("GPG_PASSWORD")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
+    sign publishing.publications.gpr
 }
 
 
